fix: fix z-index for nav

--- a/packages/monolithic-app/src/global_styles.css
+++ b/packages/monolithic-app/src/global_styles.css
@@ -84,7 +84,7 @@ footer, header, hgroup, menu, nav, section {
     height: 50px;
     display: flex;
     justify-content: center;
-    z-index: 1;
+    z-index: 5;
     position: fixed;
     top: 0;
   }
